<resources>
    <string name="app_name">ECivil App</string>
    <string name="no_connection">Sem conexão</string>
    <string name="to_conect">Conectar</string>
    <string name="active_data_wifi">Ativar WiFi/Dados</string>
    <string name="mobile_data">Dados Móveis</string>
    <string name="wifi">WiFi</string>

    <string name="facebook_app_id">495027350886378</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1º</string>
    <string name="_2">3º</string>
    <string name="_3">5º</string>
    <string name="_4">7º</string>
    <string name="_5">9º</string>
    <string name="_6">HP</string>
    <string name="seg">SEG</string>
    <string name="ter">TER</string>
    <string name="qua">QUA</string>
    <string name="qui">QUI</string>
    <string name="sex">SEX</string>
    <string name="sab">SAB</string>
    <string name="news">Notícias</string>
    <string name="timetable">Horários</string>
    <string name="syllabus">Ementas</string>
    <string name="monographies">Monografias</string>
    <string name="simec">SIMEC</string>
    <string name="period">Períodos / Horário individual</string>
    <string name="hor_rios_indispon_veis">Não há horários pra hoje\n\nEnjoy! ;)</string>
    <string name="_hi">HI</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="calendar">Calendário Acadêmico</string>
    <string name="simec_ifma">\@simec_ifma</string>
    <string name="links">Links e Downloads</string>
    <string name="sobreApp">Sobre o ECivil App</string>
    <string name="message_about_app">Aplicativo desenvolvido com o intuito de facilitar o acesso do corpo acadêmico, do curso de Bacharelado em Engenharia Civil do IFMA – Campus Monte Castelo, às informações essenciais do curso, como: projeto pedagógico, monografias apresentadas, horários, ementas e acesso a links institucionais.</string>
    <string name="loading">Carregando…</string>
    <string name="configure">Selecione o Período/Horário Individual:</string>
</resources>
