<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".fragments.ScheduleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <co.ceryle.radiorealbutton.library.RadioRealButtonGroup
                android:id="@+id/rg_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:elevation="@dimen/common_8"
                app:rrbg_animateTexts_enter="bounce|anticipate"
                app:rrbg_backgroundColor="@color/colorPrimaryDark"
                app:rrbg_bottomLineColor="#fff"
                app:rrbg_dividerColor="#aaa"
                app:rrbg_selectorColor="@color/colorAccent"
                app:rrbg_selectorSize="4dp">

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/seg"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/ter"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/qua"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/qui"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/sex"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_d6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/sab"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="14sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>


            </co.ceryle.radiorealbutton.library.RadioRealButtonGroup>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/tv_period"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/rg_days"
                android:elevation="8dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/tv_period"
                android:layout_below="@+id/rg_days"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/common_16"
                android:layout_marginRight="@dimen/common_16"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:lineSpacingExtra="12sp"
                android:text="@string/hor_rios_indispon_veis"
                android:textColor="@color/colorAccent"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="normal"/>

            <TextView
                android:id="@+id/tv_period"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rg_per"
                android:background="@color/colorPrimary"
                android:fontFamily="sans-serif-condensed"
                android:paddingLeft="@dimen/common_8"
                android:text="@string/period"
                android:textColor="#fff"
                android:textSize="14sp"/>

            <co.ceryle.radiorealbutton.library.RadioRealButtonGroup
                android:id="@+id/rg_per"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:rrbg_animateTexts_enter="bounce|anticipate"
                app:rrbg_backgroundColor="@color/colorPrimaryDark"
                app:rrbg_bottomLineColor="#fff"
                app:rrbg_dividerColor="#aaa"
                app:rrbg_selectorColor="@color/colorAccent"
                app:rrbg_selectorSize="4dp">

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_1"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_2"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_p3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_3"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_p4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_4"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_p5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_5"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="monospace"/>

                <co.ceryle.radiorealbutton.library.RadioRealButton
                    android:id="@+id/rb_hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:rrb_ripple="true"
                    app:rrb_rippleColor="@color/colorAccent"
                    app:rrb_text="@string/_hi"
                    app:rrb_textColor="@android:color/white"
                    app:rrb_textGravity="center"
                    app:rrb_textSize="18sp"
                    app:rrb_textStyle="normal|bold"
                    app:rrb_textTypeface="sans"/>

            </co.ceryle.radiorealbutton.library.RadioRealButtonGroup>

        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>